[package]
name = "jsonrpsee-types"
version = "0.16.2"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
beef = { version = "0.5.1", features = ["impl_serde"] }
tracing = { version = "0.1.34", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "raw_value", "std"] }
thiserror = "1.0"
